--- a/components/layouts/Navbar/Navbar.module.css
+++ b/components/layouts/Navbar/Navbar.module.css
@@ -23,13 +23,13 @@
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
   font-size: var(--mantine-font-size-sm);
   font-weight: 500;
+}
 
-  @mixin hover {
-    background-color: light-dark(
-      var(--mantine-color-gray-0),
-      var(--mantine-color-dark-6)
-    );
-  }
+.link:hover {
+  background-color: var(
+    --navlink-hover-bg,
+    light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6))
+  );
 }
 
 .linkLabel {
